# system-designer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  backlog.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: README.md  backlog.md  overview.md
doc/3-design/: architecture.md  data-flow.md  integration.md  sequence.md  toolchain.md  ui-screens.md  workflow.md
doc/3-design/uxui/: flow-sequence.md
doc/4-development/: developer-guide.md
system-designer-agent/backend/: .env.example  Cargo.toml  Dockerfile.dev  tarpaulin-report.html
system-designer-agent/backend/src/: config.rs  error.rs  extractors.rs  health.rs  lib.rs  logging.rs  main.rs
system-designer-agent/backend/src/middleware/: cors.rs  mod.rs  security.rs
system-designer-agent/backend/tests/: api_tests.rs
system-designer-agent/doc/3-design/: architecture.md  data-flow.md  integration.md  sequence.md
system-designer-agent/doc/3-design/uxui/: uilayout.md  userflow.md
system-designer-agent/frontend/: Dockerfile.dev  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
system-designer-agent/frontend/src/: App.jsx  App.tsx  main.tsx
system-designer-agent/frontend/src-tauri/: Cargo.toml  tauri.conf.json
system-designer-agent/frontend/src-tauri/src/: lib.rs
system-designer-agent/frontend/src-tauri/tests/: integration_test.rs
system-designer-agent/frontend/src/components/: ErrorBoundary.tsx
system-designer-agent/frontend/src/config/: index.ts
system-designer-agent/frontend/src/hooks/: index.ts  useFormData.ts  useWizard.ts
system-designer-agent/frontend/tests/: accessibility.spec.ts  api-integration.spec.ts  features.spec.ts  flow.spec.ts  responsive.spec.ts  wizard.spec.ts
(+8 files in other folders)
